--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,16 +4,22 @@ else
 WEATHER_DIR = Environment
 endif
 
-if ENABLE_NETWORK_OLK
-NETWORK_DIRS = Network NetworkOLK
-else
-NETWORK_DIRS = Network
-endif
-
 if HAVE_PLIB_PSL
 SCRIPTING_DIRS = Scripting
 else
 SCRIPTING_DIRS =
+endif
+
+if ENABLE_MPLAYER_AS
+MPLAYER_DIRS = MultiPlayer
+else
+MPLAYER_DIRS =
+endif
+
+if ENABLE_NETWORK_OLK
+NETWORK_DIRS = NetworkOLK
+else
+NETWORK_DIRS =
 endif
 
 SUBDIRS = \
@@ -30,6 +36,8 @@ SUBDIRS = \
 	Instrumentation \
         Model \
         Navaids \
+        Network \
+	$(MPLAYER_DIRS) \
         $(NETWORK_DIRS) \
         Objects \
         Scenery \
