Updates from JSBSim, including new turbine engine model from David Culp

--- a/src/FDM/JSBSim/Makefile.am
+++ b/src/FDM/JSBSim/Makefile.am
@@ -48,6 +48,7 @@ libJSBSim_a_SOURCES = \
 	FGfdmSocket.cpp FGfdmSocket.h \
   FGTurbine.cpp FGTurbine.h \
   FGPropertyManager.cpp FGPropertyManager.h  \
+  FGSimTurbine.cpp FGSimTurbine.h \
 	JSBSim.cxx JSBSim.hxx
 
 
