Add two regularly used properties to the list

--- a/docs-mini/README.properties
+++ b/docs-mini/README.properties
@@ -28,11 +28,13 @@ Engines
 /controls/engines/engine[%d]/mixture
 /controls/engines/engine[%d]/propeller-pitch
 /controls/engines/engine[%d]/magnetos
+/controls/engines/engine[%d]/boost
 /controls/engines/engine[%d]/WEP
 /controls/engines/engine[%d]/cowl-flaps-norm
 /controls/engines/engine[%d]/feather
 /controls/engines/engine[%d]/ignition
 /controls/engines/engine[%d]/augmentation
+/controls/engines/engine[%d]/afterburner
 /controls/engines/engine[%d]/reverser
 /controls/engines/engine[%d]/water-injection
 /controls/engines/engine[%d]/condition
