Move the texture loader to SimGear

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -5,7 +5,6 @@ libObjects_a_SOURCES = \
 	newmat.cxx newmat.hxx \
 	matlib.cxx matlib.hxx \
 	obj.cxx obj.hxx \
-	pt_lights.cxx pt_lights.hxx \
-	texload.c texload.h colours.h
+	pt_lights.cxx pt_lights.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
