This is step "1" of probably "many" in the process of separating out the scene management code and organizing it within simgear.  My strategy is to identify the code I want to move, and break it's direct flightgear dependencies.  Then it will be free to move over into the simgear package.
- Moved some property specific code into simgear/props/
- Split out the condition code from fgfs/src/Main/fg_props and put it
  in it's own source file in simgear/props/
- Created a scene subdirectory for scenery, model, and material property
  related code.
- Moved location.[ch]xx into simgear/scene/model/
- The location and condition code had dependencies on flightgear's global
  state (all the globals-> stuff, the flightgear property tree, etc.)  SimGear
  code can't depend on it so that data has to be passed as parameters to the
  functions/methods/constructors.
- This need to pass data as function parameters had a dramatic cascading
  effect throughout the FlightGear code.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -54,8 +54,7 @@ fgfs_SOURCES = \
 	splash.cxx splash.hxx \
 	util.cxx util.hxx \
 	viewer.cxx viewer.hxx \
-	viewmgr.cxx viewmgr.hxx \
-        location.cxx location.hxx
+	viewmgr.cxx viewmgr.hxx
 
 fgfs_LDADD = \
 	$(top_builddir)/src/Aircraft/libAircraft.a \
@@ -89,8 +88,8 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Systems/libSystems.a \
 	$(top_builddir)/src/Time/libTime.a \
 	$(WEATHER_LIBS) \
-	-lsgroute -lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen \
-	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
+	-lsgroute -lsgsky -lsgephem -lsgmodel -lsgtiming -lsgio -lsgscreen \
+	-lsgmath -lsgbucket -lsgprops -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
 	-lsgserial \
 	$(THREAD_LIBS) \
 	-lplibpu -lplibfnt -lplibjs -lplibnet -lplibssg -lplibsg -lplibul \
