--- a/src/Model/Makefile.am
+++ b/src/Model/Makefile.am
@@ -1,9 +1,10 @@
 noinst_LIBRARIES = libModel.a
 
-libModel_a_SOURCES = loader.cxx loader.hxx \
-	             model.cxx model.hxx \
-                     modelmgr.cxx modelmgr.hxx \
-                     acmodel.cxx acmodel.hxx \
-                     panelnode.cxx panelnode.hxx
+libModel_a_SOURCES = \
+	loader.cxx loader.hxx \
+	model.cxx model.hxx \
+        modelmgr.cxx modelmgr.hxx \
+        acmodel.cxx acmodel.hxx \
+        panelnode.cxx panelnode.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
