Working at unraveling and breaking dependencies inside of src/Model. I split the FGModelPlacement code out into it's own set of source files. I created two versions of the fgLoad3DModel() routine.  One that is   unecumbered by a panelnode dependency and one that is.  acmodel.cxx is   the only place that needs to load an aircraft with instrument panels. model.[ch]xx are now pretty much free to move over into simgear. loader.[ch]xx should be able to follow closely behind. This will be a big step towards being able to move the material management code over into simgear.

--- a/src/Model/Makefile.am
+++ b/src/Model/Makefile.am
@@ -1,10 +1,12 @@
 noinst_LIBRARIES = libModel.a
 
 libModel_a_SOURCES = \
+        acmodel.cxx acmodel.hxx \
 	loader.cxx loader.hxx \
 	model.cxx model.hxx \
+	model_panel.cxx model_panel.hxx \
         modelmgr.cxx modelmgr.hxx \
-        acmodel.cxx acmodel.hxx \
-        panelnode.cxx panelnode.hxx
+        panelnode.cxx panelnode.hxx \
+	placement.cxx placement.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
