- Added "SG" prefix to sound classes that recently moved to SimGear. - Cleaned up some minor compiler warnings. - Moved src/Model/placement.[ch]xx over into simgear/scene/model/

--- a/src/Model/Makefile.am
+++ b/src/Model/Makefile.am
@@ -6,7 +6,6 @@ libModel_a_SOURCES = \
 	model.cxx model.hxx \
 	model_panel.cxx model_panel.hxx \
         modelmgr.cxx modelmgr.hxx \
-        panelnode.cxx panelnode.hxx \
-	placement.cxx placement.hxx
+        panelnode.cxx panelnode.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
