Moved some of the low level scene graph construction code over to simgear.

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -1,8 +1,6 @@
 noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
-	apt_signs.cxx apt_signs.hxx \
-	obj.cxx obj.hxx \
-	pt_lights.cxx pt_lights.hxx
+	obj.cxx obj.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
