Split out some code from obj.cxx to userdata.[ch]xx

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
-	obj.cxx obj.hxx
+	obj.cxx obj.hxx \
+	userdata.cxx userdata.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
