This is a little something I'm dabbling with ... an alternate approach to doing random ground cover objects.  This is still in it's embrionic state so don't expect this to do anything useful or interesting yet. It shouldn't hurt anything though either.

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
 	obj.cxx obj.hxx \
-	userdata.cxx userdata.hxx
+	userdata.cxx userdata.hxx \
+	ssgEntityArray.hxx ssgEntityArray.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
