Add a utility that given a specific localizer position and corresponding runway info, repositions the localizer and realigns it with the runway heading so that the approach lines up perfectly.

--- a/src/Airports/Makefile.am
+++ b/src/Airports/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES = libAirports.a
 
-noinst_PROGRAMS = gensimple genrunways
+noinst_PROGRAMS = gensimple genrunways calc_loc
 
 libAirports_a_SOURCES = \
 	runways.cxx runways.hxx \
@@ -11,5 +11,8 @@ gensimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lsgxml -lmk4 -lz
 
 genrunways_SOURCES = genrunways.cxx
 genrunways_LDADD = libAirports.a -lsgdebug -lsgmisc -lsgxml -lmk4 -lz
+
+calc_loc_SOURCES = calc_loc.cxx
+calc_loc_LDADD = -lsgmath
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
