--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -1,16 +1,18 @@
 noinst_LIBRARIES = libInstrumentation.a
 
-libInstrumentation_a_SOURCES = instrument_mgr.cxx instrument_mgr.hxx \
-                               dme.cxx dme.hxx \
-                               gps.cxx gps.hxx \
-                               gyro.cxx gyro.hxx \
-                               airspeed_indicator.cxx airspeed_indicator.hxx \
-                               attitude_indicator.cxx attitude_indicator.hxx \
-                               altimeter.cxx altimeter.hxx \
-                               turn_indicator.cxx turn_indicator.hxx \
-                               slip_skid_ball.cxx slip_skid_ball.hxx \
-                               heading_indicator.cxx heading_indicator.hxx \
-                               vertical_speed_indicator.cxx vertical_speed_indicator.hxx \
-                               mag_compass.cxx mag_compass.hxx
+libInstrumentation_a_SOURCES = \
+	instrument_mgr.cxx instrument_mgr.hxx \
+	annunciator.cxx annunciator.hxx \
+        dme.cxx dme.hxx \
+        gps.cxx gps.hxx \
+        gyro.cxx gyro.hxx \
+        airspeed_indicator.cxx airspeed_indicator.hxx \
+        attitude_indicator.cxx attitude_indicator.hxx \
+        altimeter.cxx altimeter.hxx \
+        turn_indicator.cxx turn_indicator.hxx \
+        slip_skid_ball.cxx slip_skid_ball.hxx \
+        heading_indicator.cxx heading_indicator.hxx \
+        vertical_speed_indicator.cxx vertical_speed_indicator.hxx \
+        mag_compass.cxx mag_compass.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
