Melchior FRANZ: These patches add a clock instrument, which allows to model failure ("serviceable") and to adjust the time independently of the system time (defaults to GMT). The main incentive is to make the p51d clock work and adjustable via the knob.
 o Offers a time string ("12:03:15") for the LCD or for LED
   clocks, or an empty string in case of failure/power off. The
   instrument assumes that digital clocks are battery buffered,
   so they will be updated even if there's nothing on the display.

 o Offers the number of seconds since midnight for analog
   clocks, like in the p51d. This number is not increased
   if !serviceable. So the clock will stand still and continue
   where it stopped when it's serviceable again.

I did not consider voltage yet, because the Mustang's clock will need a lot more current than the LCD clock. The instrument is updated 4 times per second but returns immediately if neither time nor offset changed. The function getGMTString() in fg_props.cxx could be removed after applying these patches.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -13,6 +13,7 @@ libInstrumentation_a_SOURCES = \
         slip_skid_ball.cxx slip_skid_ball.hxx \
         heading_indicator.cxx heading_indicator.hxx \
         vertical_speed_indicator.cxx vertical_speed_indicator.hxx \
-        mag_compass.cxx mag_compass.hxx
+        mag_compass.cxx mag_compass.hxx \
+        clock.cxx clock.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
