--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,6 @@ bin_PROGRAMS = est-epsilon gl-info
 noinst_PROGRAMS = test-gethostname test-mktime test-text test-up test-env-map
 
 est_epsilon_SOURCES = est-epsilon.c
-est_epsilon_LDADD = $(base_LIBS)
 
 gl_info_SOURCES = gl-info.c
 gl_info_LDADD = $(opengl_LIBS)
@@ -12,13 +11,10 @@ test_env_map_SOURCES = test-env-map.cxx
 test_env_map_LDADD = $(opengl_LIBS)
 
 test_gethostname_SOURCES = test-gethostname.cxx
-test_gethostname_LDADD = $(base_LIBS)
 
 test_mktime_SOURCES = test-mktime.cxx
-test_mktime_LDADD = $(base_LIBS)
 
 test_text_SOURCES = test-text.cxx
-test_text_LDADD = $(base_LIBS)
 
 test_up_SOURCES = test-up.cxx
-test_up_LDADD = -lsgmath -lsgdebug -lplibsg -lplibul $(base_LIBS)
+test_up_LDADD = -lsgmath -lsgdebug -lplibsg -lplibul
