--- a/utils/TerraSync/Makefile.am
+++ b/utils/TerraSync/Makefile.am
@@ -4,4 +4,4 @@ bin_PROGRAMS = terrasync
 
 terrasync_SOURCES = terrasync.cxx
 
-terrasync_LDADD = -lplibnet -lplibul
+terrasync_LDADD = -lplibnet -lplibul $(network_LIBS)
