Change GLUT_H to FG_GLUT_H to prevent a naming clash with freeglut.

--- a/configure.ac
+++ b/configure.ac
@@ -242,11 +242,11 @@ base_LIBS="$LIBS"
 dnl check for glut location
 AC_CHECK_HEADER(GL/glut.h)
 if test "x$ac_cv_header_GL_glut_h" = "xyes"; then
-    AC_DEFINE([GLUT_H], <GL/glut.h>, [Define as glut.h include location])
+    AC_DEFINE([FG_GLUT_H], <GL/glut.h>, [Define as glut.h include location])
 else
     AC_CHECK_HEADER(GLUT/glut.h)
     if test "x$ac_cv_header_GLUT_glut_h" = "xyes"; then
-        AC_DEFINE([GLUT_H], <GLUT/glut.h>, [Define as glut.h include location])
+        AC_DEFINE([FG_GLUT_H], <GLUT/glut.h>, [Define as glut.h include location])
     else
         echo "Neither GL/glut.h nor GLUT/glut.h found.  Cannot continue"
         exit
