Remove one dependence on MetaKit.

--- a/src/Airports/Makefile.am
+++ b/src/Airports/Makefile.am
@@ -1,13 +1,10 @@
 noinst_LIBRARIES = libAirports.a
 
-noinst_PROGRAMS = gensimple genrunways calc_loc
+noinst_PROGRAMS = genrunways calc_loc
 
 libAirports_a_SOURCES = \
 	runways.cxx runways.hxx \
 	simple.cxx simple.hxx
-
-gensimple_SOURCES = gensimple.cxx
-gensimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lsgxml -lmk4 -lz
 
 genrunways_SOURCES = genrunways.cxx
 genrunways_LDADD = libAirports.a -lsgdebug -lsgmisc -lsgxml -lmk4 -lz
