New automake, new problems. Add $base_LIBS for programs since $LIBS isn't substituted automatically anymore

--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -12,6 +12,6 @@ testnavs_SOURCES = testnavs.cxx
 testnavs_LDADD = \
 	libNavaids.a \
 	-lsgtiming -lsgmath -lsgmisc -lsgdebug -lsgmagvar -lsgxml \
-	-lz
+	$(base_LIBS) -lz
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
