--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ dnl Require at least automake 2.52
 AC_PREREQ(2.52)
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(FlightGear, 0.9.2)
+AM_INIT_AUTOMAKE(FlightGear, 0.9.3-pre1)
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -400,7 +400,7 @@ if test "x$ac_cv_header_simgear_version_h" != "xyes"; then
     exit
 fi
 
-AC_MSG_CHECKING([for simgear 0.3.3 or newer])
+AC_MSG_CHECKING([for simgear 0.3.4 or newer])
 AC_TRY_RUN([
 #include <stdio.h>
 
@@ -411,7 +411,7 @@ AC_TRY_RUN([
 
 #define MIN_MAJOR 0
 #define MIN_MINOR 3
-#define MIN_MICRO 3
+#define MIN_MICRO 4
 
 int main() {
     int major, minor, micro;
